[package]
name = "eoe"
version = "0.1.2"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/eoe"
readme = "README.md"
license = "MIT"
exclude = ["/assets/"]
description = "This crate provides utilities for exiting processes on errors gracefully."

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.96"
