[package]
name = "eoe"
version = "0.2.0"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["command-line-utilities"]
repository = "https://github.com/Lingxuan-Ye/eoe"
readme = "README.md"
license = "MIT"
description = "This crate provides utilities for exiting processes on errors gracefully."

[dependencies]
anyhow = "1.0.0"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
